--- a/package.json
+++ b/package.json
@@ -7,5 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "csvjson": "^4.3.4",
+    "csvtojson": "^1.1.7",
+    "json2csv": "^3.11.2",
+    "moment": "^2.18.1",
+    "request": "^2.81.0",
+    "request-promise-native": "^1.0.4",
+    "shelljs": "^0.7.8",
+    "spotify-web-api-node": "^2.5.0"
+  }
 }
